# ai-semantic-chunking

./: .gitignore  pyproject.toml
src/20_chunking_semantic/: main.py
